--- a/index.html
+++ b/index.html
@@ -12,152 +12,191 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
-        <ul class="list">
-          <li>
-            <a href="./index.html" class="header-navigation link link-hover current">Студия</a>
+    <header class="header">
+      <div class="container site-navigation">
+        <nav class="header-navigation">
+          <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+          <ul class="list header-navigation-list">
+            <li class="header-navigation-item">
+              <a href="./index.html" class="current header-navigation-link link link-hover"
+                >Студия</a
+              >
+            </li>
+
+            <li class="header-navigation-item">
+              <a href="./portfolio.html" class="header-navigation-link link link-hover"
+                >Портфолио</a
+              >
+            </li>
+            <li class="header-navigation-item">
+              <a href="#" class="header-navigation-link link link-hover">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="list header-contacts">
+          <li class="header-contacts-item">
+            <a href="mailto:info@devstudio.com" class="link contacts link-hover"
+              >info@devstudio.com
+            </a>
           </li>
 
-          <li>
-            <a href="./portfolio.html" class="header-navigation link link-hover">Портфолио</a>
-          </li>
-
-          <li>
-            <a href="#" class="header-navigation link link-hover">Контакты</a>
+          <li class="header-contacts-item">
+            <a href="tel:+380961111111" class="link contacts link-hover">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts link link-hover"
-            >info@devstudio.com
-          </a>
-        </li>
-
-        <li>
-          <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section class="hero">
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
+      <section class="section hero">
+        <div class="container">
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="button hero-button">Заказать услугу</button>
+        </div>
       </section>
 
-      <section class="advantages">
-        <h2 class="section-title">Преимущества</h2>
-        <ul class="list">
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-          </li>
+      <section class="section advantages">
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="list advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Внимание к деталям</h3>
+              <p class="advantages-description">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
 
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Пунктуальность</h3>
+              <p class="advantages-description">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
 
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Планирование</h3>
+              <p class="advantages-description">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
 
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-          </li>
-        </ul>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Современные технологии</h3>
+              <p class="advantages-description">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="services">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/service-img-1.jpg"
-              alt="Разработка приложений"
-              width="370"
-              height="294"
-            />
-          </li>
+      <section class="section services">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="list services-list">
+            <li class="services-list-item">
+              <img
+                src="./images/service-img-1.jpg"
+                alt="Разработка приложений"
+                width="370"
+                height="294"
+              />
+            </li>
 
-          <li>
-            <img
-              src="./images/service-img-2.jpg"
-              alt="Разработка программ"
-              width="370"
-              height="294"
-            />
-          </li>
+            <li class="services-list-item">
+              <img
+                src="./images/service-img-2.jpg"
+                alt="Разработка программ"
+                width="370"
+                height="294"
+              />
+            </li>
 
-          <li>
-            <img src="./images/service-img-3.jpg" alt="Дизайн" width="370" height="294" />
-          </li>
-        </ul>
+            <li class="services-list-item">
+              <img src="./images/service-img-3.jpg" alt="Дизайн" width="370" height="294" />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/team-avatar-1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="team-card">
+              <img
+                src="./images/team-avatar-1.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <div class="team-card-text">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p class="team-description">Product Designer</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/team-avatar-2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
+            <li class="team-card">
+              <img src="./images/team-avatar-2.jpg" alt="Ольга Репина" width="270" height="260" />
+              <div class="team-card-text">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-description">Frontend Developer</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/team-avatar-3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
+            <li class="team-card">
+              <img
+                src="./images/team-avatar-3.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <div class="team-card-text">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p class="team-description">Marketing</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/team-avatar-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+            <li class="team-card">
+              <img src="./images/team-avatar-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
+              <div class="team-card-text">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-description">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="address link"
-              href="https://goo.gl/maps/vVYcvFzkVmFzaZAD8"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
+      <div class="container">
+        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <address>
+          <ul class="list address-list">
+            <li class="address-list">
+              <a
+                class="address link"
+                href="https://goo.gl/maps/vVYcvFzkVmFzaZAD8"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
 
-          <li>
-            <a href="mailto:info@example.com" class="contacts link link-hover">info@example.com</a>
-          </li>
+            <li class="address-list">
+              <a href="mailto:info@example.com" class="contacts link link-hover"
+                >info@example.com</a
+              >
+            </li>
 
-          <li>
-            <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+            <li class="address-list">
+              <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
