--- a/portfolio.html
+++ b/portfolio.html
@@ -13,145 +13,170 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
-        <ul class="list">
-          <li>
-            <a href="./index.html" class="header-navigation link link-hover">Студия</a>
+    <header class="header">
+      <div class="container site-navigation">
+        <nav class="header-navigation">
+          <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+          <ul class="list header-navigation-list">
+            <li class="header-navigation-item">
+              <a href="./index.html" class="header-navigation-link link link-hover">Студия</a>
+            </li>
+
+            <li class="header-navigation-item">
+              <a href="./portfolio.html" class="current header-navigation-link link link-hover"
+                >Портфолио</a
+              >
+            </li>
+            <li class="header-navigation-item">
+              <a href="#" class="header-navigation-link link link-hover">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="list header-contacts">
+          <li class="header-contacts-item">
+            <a href="mailto:info@devstudio.com" class="link contacts link-hover"
+              >info@devstudio.com
+            </a>
           </li>
 
-          <li>
-            <a href="./portfolio.html" class="header-navigation link link-hover current"
-              >Портфолио</a
-            >
-          </li>
-
-          <li>
-            <a href="#" class="header-navigation link link-hover">Контакты</a>
+          <li class="header-contacts-item">
+            <a href="tel:+380961111111" class="link contacts link-hover">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts link link-hover"
-            >info@devstudio.com
-          </a>
-        </li>
-
-        <li>
-          <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section>
-        <h1>Работы</h1>
-        <ul class="list">
-          <li>
-            <button type="button" class="button active">Все</button>
-          </li>
+      <section class="section works">
+        <div class="container">
+          <h1 class="visually-hidden">Работы</h1>
+          <ul class="list works-filters">
+            <li class="works-filters-item">
+              <button type="button" class="button active works-filters-button">Все</button>
+            </li>
 
-          <li>
-            <button type="button" class="button">Веб-сайты</button>
-          </li>
+            <li class="works-filters-item">
+              <button type="button" class="button works-filters-button">Веб-сайты</button>
+            </li>
 
-          <li>
-            <button type="button" class="button">Приложения</button>
-          </li>
+            <li class="works-filters-item">
+              <button type="button" class="button works-filters-button">Приложения</button>
+            </li>
 
-          <li>
-            <button type="button" class="button">Дизайн</button>
-          </li>
+            <li class="works-filters-item">
+              <button type="button" class="button works-filters-button">Дизайн</button>
+            </li>
 
-          <li>
-            <button type="button" class="button">Маркетинг</button>
-          </li>
-        </ul>
+            <li class="works-filters-item">
+              <button type="button" class="button works-filters-button">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul class="list">
-          <li>
-            <img src="./images/portfolio-img-1.jpg" alt="Веб-сайт" width="370" height="294" />
-            <h2 class="works-title">Технокряк</h2>
-            <p class="works-description">Веб-сайт</p>
-          </li>
+          <ul class="list works-list">
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-1.jpg" alt="Веб-сайт" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Технокряк</h2>
+                <p class="works-list-description">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-2.jpg" alt="Дизайн" width="370" height="294" />
-            <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
-            <p class="works-description">Дизайн</p>
-          </li>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-2.jpg" alt="Дизайн" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Постер New Orlean vs Golden Star</h2>
+                <p class="works-list-description">Дизайн</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-3.jpg" alt="Приложение" width="370" height="294" />
-            <h2 class="works-title">Ресторан Seafood</h2>
-            <p class="works-description">Приложение</p>
-          </li>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-3.jpg" alt="Приложение" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Ресторан Seafood</h2>
+                <p class="works-list-description">Приложение</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-4.jpg" alt="Маркетинг" width="370" height="294" />
-            <h2 class="works-title">Проект Prime</h2>
-            <p class="works-description">Маркетинг</p>
-          </li>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-4.jpg" alt="Маркетинг" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Проект Prime</h2>
+                <p class="works-list-description">Маркетинг</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-5.jpg" alt="Приложение" width="370" height="294" />
-            <h2 class="works-title">Проект Boxes</h3>
-            <p class="works-description">Приложение</p>
-          </li>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-5.jpg" alt="Приложение" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Проект Boxes</h2>
+                <p class="works-list-description">Приложение</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-6.jpg" alt="Веб-сайт" width="370" height="294" />
-            <h2 class="works-title">Inspiration has no Borders</h2>
-            <p class="works-description">Веб-сайт</p>
-          </li>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-6.jpg" alt="Веб-сайт" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Inspiration has no Borders</h2>
+                <p class="works-list-description">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-7.jpg" alt="Дизайн" width="370" height="294" />
-            <h2 class="works-title">Издание Limited Edition</h2>
-            <p class="works-description">Дизайн</p>
-          </li>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-7.jpg" alt="Дизайн" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Издание Limited Edition</h2>
+                <p class="works-list-description">Дизайн</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-8.jpg" alt="Маркетинг" width="370" height="294" />
-            <h2 class="works-title">Проект LAB</h3>
-            <p class="works-description">Маркетинг</p>
-          </li>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-8.jpg" alt="Маркетинг" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Проект LAB</h2>
+                <p class="works-list-description">Маркетинг</p>
+              </div>
+            </li>
 
-          <li>
-            <img src="./images/portfolio-img-9.jpg" alt="Приложение" width="370" height="294" />
-            <h2 class="works-title">Growing Business</h3>
-            <p class="works-description">Приложение</p>
-          </li>
-        </ul>
+            <li class="works-list-card">
+              <img src="./images/portfolio-img-9.jpg" alt="Приложение" width="370" height="294" />
+              <div class="work-list-text">
+                <h2 class="works-list-title">Growing Business</h2>
+                <p class="works-list-description">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              class="address link"
-              href="https://goo.gl/maps/vVYcvFzkVmFzaZAD8"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
+      <div class="container">
+        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <address>
+          <ul class="list address-list">
+            <li class="address-list">
+              <a
+                class="address link"
+                href="https://goo.gl/maps/vVYcvFzkVmFzaZAD8"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
 
-          <li>
-            <a href="mailto:info@example.com" class="contacts link link-hover">info@example.com</a>
-          </li>
+            <li class="address-list">
+              <a href="mailto:info@example.com" class="contacts link link-hover"
+                >info@example.com</a
+              >
+            </li>
 
-          <li>
-            <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+            <li class="address-list">
+              <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
