--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="header">
       <div class="container site-navigation">
         <nav class="header-navigation">
-          <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+          <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
           <ul class="list header-navigation-list">
             <li class="header-navigation-item">
-              <a href="./index.html" class="current header-navigation-link link link-hover"
+              <a class="current link header-navigation-link link-hover" href="./index.html"
                 >Студия</a
               >
             </li>
@@ -30,30 +30,30 @@
               >
             </li>
             <li class="header-navigation-item">
-              <a href="#" class="header-navigation-link link link-hover">Контакты</a>
+              <a href="#" class="link header-navigation-link link-hover">Контакты</a>
             </li>
           </ul>
         </nav>
 
         <ul class="list header-contacts">
           <li class="header-contacts-item">
-            <a href="mailto:info@devstudio.com" class="link contacts link-hover"
+            <a class="link contacts link-hover" href="mailto:info@devstudio.com"
               >info@devstudio.com
             </a>
           </li>
 
           <li class="header-contacts-item">
-            <a href="tel:+380961111111" class="link contacts link-hover">+38 096 111 11 11</a>
+            <a class="link contacts link-hover" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
     </header>
 
     <main>
-      <section class="section hero">
+      <section class="hero">
         <div class="container">
           <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="button hero-button">Заказать услугу</button>
+          <button class="button hero-button" type="button">Заказать услугу</button>
         </div>
       </section>
 
@@ -98,6 +98,7 @@
           <ul class="list services-list">
             <li class="services-list-item">
               <img
+                class="image"
                 src="./images/service-img-1.jpg"
                 alt="Разработка приложений"
                 width="370"
@@ -107,6 +108,7 @@
 
             <li class="services-list-item">
               <img
+                class="image"
                 src="./images/service-img-2.jpg"
                 alt="Разработка программ"
                 width="370"
@@ -115,7 +117,13 @@
             </li>
 
             <li class="services-list-item">
-              <img src="./images/service-img-3.jpg" alt="Дизайн" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/service-img-3.jpg"
+                alt="Дизайн"
+                width="370"
+                height="294"
+              />
             </li>
           </ul>
         </div>
@@ -127,6 +135,7 @@
           <ul class="list team-list">
             <li class="team-card">
               <img
+                class="image"
                 src="./images/team-avatar-1.jpg"
                 alt="Игорь Демьяненко"
                 width="270"
@@ -139,7 +148,13 @@
             </li>
 
             <li class="team-card">
-              <img src="./images/team-avatar-2.jpg" alt="Ольга Репина" width="270" height="260" />
+              <img
+                class="image"
+                src="./images/team-avatar-2.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
               <div class="team-card-text">
                 <h3 class="team-title">Ольга Репина</h3>
                 <p class="team-description">Frontend Developer</p>
@@ -148,6 +163,7 @@
 
             <li class="team-card">
               <img
+                class="image"
                 src="./images/team-avatar-3.jpg"
                 alt="Николай Тарасов"
                 width="270"
@@ -160,7 +176,13 @@
             </li>
 
             <li class="team-card">
-              <img src="./images/team-avatar-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
+              <img
+                class="image"
+                src="./images/team-avatar-4.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
               <div class="team-card-text">
                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p class="team-description">UI Designer</p>
@@ -173,7 +195,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
         <address>
           <ul class="list address-list">
             <li class="address-list">
@@ -187,13 +209,13 @@
             </li>
 
             <li class="address-list">
-              <a href="mailto:info@example.com" class="contacts link link-hover"
+              <a class="contacts link link-hover" href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
 
             <li class="address-list">
-              <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
+              <a class="contacts link link-hover" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
