--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/modern-nomalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -16,32 +17,32 @@
     <header class="header">
       <div class="container site-navigation">
         <nav class="header-navigation">
-          <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+          <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
           <ul class="list header-navigation-list">
             <li class="header-navigation-item">
-              <a href="./index.html" class="header-navigation-link link link-hover">Студия</a>
+              <a class="link header-navigation-link link-hover" href="./index.html">Студия</a>
             </li>
 
             <li class="header-navigation-item">
-              <a href="./portfolio.html" class="current header-navigation-link link link-hover"
+              <a class="current link header-navigation-link link-hover" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
             <li class="header-navigation-item">
-              <a href="#" class="header-navigation-link link link-hover">Контакты</a>
+              <a class="link header-navigation-link link-hover" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
 
         <ul class="list header-contacts">
           <li class="header-contacts-item">
-            <a href="mailto:info@devstudio.com" class="link contacts link-hover"
+            <a class="contacts link link-hover" href="mailto:info@devstudio.com"
               >info@devstudio.com
             </a>
           </li>
 
           <li class="header-contacts-item">
-            <a href="tel:+380961111111" class="link contacts link-hover">+38 096 111 11 11</a>
+            <a class="contacts link link-hover" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -53,29 +54,35 @@
           <h1 class="visually-hidden">Работы</h1>
           <ul class="list works-filters">
             <li class="works-filters-item">
-              <button type="button" class="button active works-filters-button">Все</button>
+              <button class="button active works-filters-button" type="button">Все</button>
             </li>
 
             <li class="works-filters-item">
-              <button type="button" class="button works-filters-button">Веб-сайты</button>
+              <button class="button works-filters-button" type="button">Веб-сайты</button>
             </li>
 
             <li class="works-filters-item">
-              <button type="button" class="button works-filters-button">Приложения</button>
+              <button class="button works-filters-button" type="button">Приложения</button>
             </li>
 
             <li class="works-filters-item">
-              <button type="button" class="button works-filters-button">Дизайн</button>
+              <button class="button works-filters-button" type="button">Дизайн</button>
             </li>
 
             <li class="works-filters-item">
-              <button type="button" class="button works-filters-button">Маркетинг</button>
+              <button class="button works-filters-button" type="button">Маркетинг</button>
             </li>
           </ul>
 
           <ul class="list works-list">
             <li class="works-list-card">
-              <img src="./images/portfolio-img-1.jpg" alt="Веб-сайт" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-1.jpg"
+                alt="Веб-сайт"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Технокряк</h2>
                 <p class="works-list-description">Веб-сайт</p>
@@ -83,7 +90,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-2.jpg" alt="Дизайн" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-2.jpg"
+                alt="Дизайн"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Постер New Orlean vs Golden Star</h2>
                 <p class="works-list-description">Дизайн</p>
@@ -91,7 +104,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-3.jpg" alt="Приложение" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-3.jpg"
+                alt="Приложение"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Ресторан Seafood</h2>
                 <p class="works-list-description">Приложение</p>
@@ -99,7 +118,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-4.jpg" alt="Маркетинг" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-4.jpg"
+                alt="Маркетинг"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Проект Prime</h2>
                 <p class="works-list-description">Маркетинг</p>
@@ -107,7 +132,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-5.jpg" alt="Приложение" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-5.jpg"
+                alt="Приложение"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Проект Boxes</h2>
                 <p class="works-list-description">Приложение</p>
@@ -115,7 +146,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-6.jpg" alt="Веб-сайт" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-6.jpg"
+                alt="Веб-сайт"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Inspiration has no Borders</h2>
                 <p class="works-list-description">Веб-сайт</p>
@@ -123,7 +160,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-7.jpg" alt="Дизайн" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-7.jpg"
+                alt="Дизайн"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Издание Limited Edition</h2>
                 <p class="works-list-description">Дизайн</p>
@@ -131,7 +174,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-8.jpg" alt="Маркетинг" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-8.jpg"
+                alt="Маркетинг"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Проект LAB</h2>
                 <p class="works-list-description">Маркетинг</p>
@@ -139,7 +188,13 @@
             </li>
 
             <li class="works-list-card">
-              <img src="./images/portfolio-img-9.jpg" alt="Приложение" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio-img-9.jpg"
+                alt="Приложение"
+                width="370"
+                height="294"
+              />
               <div class="work-list-text">
                 <h2 class="works-list-title">Growing Business</h2>
                 <p class="works-list-description">Приложение</p>
@@ -152,7 +207,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <a class="logo link" href="./index.html"><span>Web</span>Studio</a>
         <address>
           <ul class="list address-list">
             <li class="address-list">
@@ -166,13 +221,13 @@
             </li>
 
             <li class="address-list">
-              <a href="mailto:info@example.com" class="contacts link link-hover"
+              <a class="contacts link link-hover" href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
 
             <li class="address-list">
-              <a href="tel:+380961111111" class="contacts link link-hover">+38 096 111 11 11</a>
+              <a class="contacts link link-hover" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
